perf: provide width & height attributes in images to avoid layout shifting

--- a/src/styles/layouts/_footer.scss
+++ b/src/styles/layouts/_footer.scss
@@ -33,6 +33,7 @@
 
     img {
       width: 8em;
+      height: 8em;
       filter: drop-shadow(0 0 5px hwb(var(--shadow) / 0.5));
     }
   }
