--- a/src/styles/layouts/_header.scss
+++ b/src/styles/layouts/_header.scss
@@ -13,6 +13,7 @@
 
     .logo img {
       inline-size: 7em;
+      height: 7em;
       filter: drop-shadow(0 0 2px hwb(var(--shadow) / 0.5));
     }
 
